--- a/en/index.html
+++ b/en/index.html
@@ -47,14 +47,27 @@
         </div>
 
         <div class="element">
-            <h3 id="result-output">Result: 0</h3>
+            <h3>Result: <span id="result-output"></span> $</h3>
         </div>
-        
-        <!-- <div class="calc-element">
+
+        <div class="calc-element">
             <br>
             <input type="checkbox" id="enable-optional-settings">
             <label for="enable-optional-settings">Show additional settings</label>
-        </div> -->
+        </div>
+        <div class="calc-element hidden" id="optional">
+            <div>
+                <label for="added-balance">Added balance (per period): </label><br>
+                <input type="number" id="added-balance" min="0" value="0">
+            </div>
+            <div>
+                <label for="inflation">Inflation (percent): </label><br>
+                <input type="number" id="inflation" step="0.1" min="0" value="0">
+            </div>
+            <div class="element">
+                <h3>Purchasing power (compared to today): <span id="result-output-optional"></span> $</h3>
+            </div>
+        </div>
     </div>
     <script src="/script.js"></script>
 </body>
