Add display of selected payment period Bottom input for optional added balance now displays how often the balance is added based on previous input.

--- a/en/index.html
+++ b/en/index.html
@@ -57,7 +57,7 @@
         </div>
         <div class="calc-element hidden" id="optional">
             <div>
-                <label for="added-balance">Added balance (per period): </label><br>
+                <label for="added-balance">Added balance every <span id="range-value-optional">12</span> month(s): </label><br>
                 <input type="number" id="added-balance" min="0" value="0">
             </div>
             <div>
