--- a/ru/index.html
+++ b/ru/index.html
@@ -57,11 +57,11 @@
         </div>
         <div class="calc-element hidden" id="optional">
             <div>
-                <label for="added-balance">Увеличение вклада (за указанный период): </label><br>
+                <label for="added-balance">Увеличение вклада каждый(е) <span id="range-value-optional">12</span> месяц(ев): </label><br>
                 <input type="number" id="added-balance" min="0" value="0">
             </div>
             <div>
-                <label for="inflation">Инфляция (в процентах): </label><br>
+                <label for="inflation">Инфляция (за год): </label><br>
                 <input type="number" id="inflation" step="0.1" min="0" value="0">
             </div>
             <div class="element">
